changed default button text format

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,3 +2,9 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+
+
+// Override the default styling of Material
+.v-btn {
+  text-transform: none !important;
+}
