--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,7 +2,9 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
-
+* {
+  box-sizing: border-box;
+}
 
 // Override the default styling of Material
 .v-btn {
