title is in place

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -4,6 +4,7 @@
 // $font-size-root: 20px;
 * {
   box-sizing: border-box;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 // Override the default styling of Material
